# ieee-southeastcon-hardware-competition-2026

./: README.md
HardwareDriver/: HardwareDriver.ino  encoders.h  functions.h  lcd_display.h  pdControl.h  serial.h  start_bar.h  tasks.h  timer.h
XIAO_IR_transmitter/: XIAO_IR_transmitter.ino
launch_drone_ws/src/launch_drone_pkg/: package.xml  setup.cfg  setup.py
launch_drone_ws/src/launch_drone_pkg/launch_drone_pkg/: drone_control.py  launch_drone_node.py
lidar_wall_follow_v1/src/lidar_wall_follow_v1/: package.xml  setup.cfg  setup.py
lidar_wall_follow_v1/src/lidar_wall_follow_v1/lidar_wall_follow_v1/: lidar_twelve_sensors.py  program_controller_node.py  wall_follow_node.py
rgb_color_ws/src/rgb_color_detector/: CMakeLists.txt  package.xml
rgb_color_ws/src/rgb_color_detector/src/: image_color_detector_node.cpp
robot_launch/: robot_start.launch.py
ws_lidar/: frames_2026-03-04_18.13.13.gv
xiao_ws/src/xiao_ir_pkg/: package.xml  setup.cfg  setup.py
xiao_ws/src/xiao_ir_pkg/xiao_ir_pkg/: send_ir_node.py
